submit align fix

--- a/src/components/map.css
+++ b/src/components/map.css
@@ -193,8 +193,8 @@
     border-radius: 1.5em;
 }
 
-.passField {
-    margin-right: 10px;
+.regSubmit {
+    margin-left: 10px;
 }
 
 @media only screen and (max-width: 1100px)  {
@@ -268,9 +268,5 @@
     .cancelEditBtn {
         margin:0 auto;
         display: block;
-    }
-
-    .passField {
-        margin-right: 0;
     }
 }
